<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:textAlignment="center">

    <TextView
        android:id="@+id/team_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="170dp"
        android:paddingTop="20dp"
        android:text="@string/TeamName"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/deletebutton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/delete"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/team_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <ImageButton
        android:id="@+id/addpoints"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/addpoins_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deletebutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/team_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_add_box_24" />

    <ImageButton
        android:id="@+id/resetpoints"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/resetpoints"

        app:layout_constraintBottom_toBottomOf="@+id/deletebutton"
        app:layout_constraintEnd_toStartOf="@+id/deletebutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/team_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_settings_backup_restore_24" />

    <TextView
        android:id="@+id/pointsnumber"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="30dp"
        android:text="@string/number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/team_name"
        app:layout_constraintEnd_toStartOf="@+id/resetpoints"
        app:layout_constraintStart_toEndOf="@+id/team_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>